# makevoke

./: Makefile  README.rst  freezer.py  frozen.txt  setup.cfg  sphinx_reload.py
docs/: conf.py  development.rst  history.rst  index.rst  install.rst  requirements.txt  sphinx_reload.py
docs/core/: base.rst  exceptions.rst  index.rst  printout.rst  validators.rst
makevoke/: __init__.py  base.py  exceptions.py  printout.py  utils.py  validators.py
tests/: 0001_base.py  0010_printout.py  0011_validators.py  conftest.py
